--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,6 @@
   },
   "browser_action": {
     "default_title": "Click me!"
-  }
+  }//,
+  //"web_accessible_resources": ["bootstrap-native.js"]
 }
