Add CSS files via CDN
Use CDN hosted Bootstrap CSS file as opposed to local file to avoid chrome error

--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,6 @@
   },
   "browser_action": {
     "default_title": "Click me!"
-  }//,
-  //"web_accessible_resources": ["bootstrap-native.js"]
+  },
+  "web_accessible_resources": ["bootstrap.min.css"]
 }
