--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,24 @@
 {
-  "name": "RMP",
-  "description": "Work in Progress",
+  "name": "CSUF Schedule Aid",
+  "description": "Displays CSUF professor info when icon is clicked on CSUF registration page (class listings)",
   "manifest_version": 2,
-  "version": "0.8",
+  "version": "0.9",
   "icons": { 
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png" 
   },
   "permissions": [
-    "activeTab",
-    "http://*/",
-    "https://*/"
+    "activeTab"
   ],
   "background": {
-    "scripts": ["jquery-3.2.1.min.js","bootstrap.min.js","background.js"],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": {
     "default_title": "Click me!"
   },
-  "web_accessible_resources": ["bootstrap.min.css"]
+  "web_accessible_resources": [
+    "bootstrap.min.css"
+  ]
 }
