--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CSUF Schedule Aid",
-  "description": "Displays CSUF professor info when icon is clicked on CSUF registration page (class listings)",
+  "description": "Displays CSUF professor info when icon is clicked on CSUF registration page (class listing page)",
   "manifest_version": 2,
   "version": "0.9",
   "icons": { 
@@ -17,8 +17,5 @@
   },
   "browser_action": {
     "default_title": "Click me!"
-  },
-  "web_accessible_resources": [
-    "bootstrap.min.css"
-  ]
+  }
 }
